# trosty

./: CHANGELOG.md  CLA.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: audit.rs  error.rs  expand.rs  lib.rs  projects.rs  scrub.rs  vault.rs
crates/trosty/: Cargo.toml  HOOKS-FINDINGS.md
crates/trosty/src/: hook.rs  main.rs  session.rs
crates/trosty/tests/: cli.rs  hook_cli.rs  session_pty.rs
crates/trosty/tests/fixtures/: post_tool_use.json  pre_tool_use.json  user_prompt_submit.json
