[package]
name = "trosty-core"
description = "Core library for trosty: secret vault, scrubber, expander, projects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
toml = "0.8"
aho-corasick = "1"
base64 = "0.22"
hex = "0.4"
percent-encoding = "2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
