[package]
name = "trosty"
description = "A protective terminal layer for working with secrets next to AI tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rpassword = "7"
trosty-core = { path = "../core" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
