[package]
name = "trosty"
description = "A protective terminal layer for working with secrets next to AI tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
serde_json = "1"
portable-pty = "0.9"
rpassword = "7"
trosty-core = { path = "../core" }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
